# trustfall

./: .gitignore  CODEOWNERS  Cargo.toml  LICENSE.txt  README.md  rustfmt.toml  spec.md
demo-feeds/: Cargo.toml
demo-feeds/src/: adapter.rs  feeds.graphql  main.rs
demo-feeds/src/example_queries/: feed_content.ron  feed_links.ron  game_reviews.ron
demo-hackernews/: Cargo.toml  README.md  hackernews.graphql
demo-hackernews/example_queries/: jobs_in_top_50.ron  latest_links_by_high_karma_users.ron
demo-hackernews/src/: adapter.rs  main.rs  token.rs  vertex.rs
demo-hytradboi/: Cargo.toml  README.md  crates_io_query.graphql  hackernews_query.graphql  schema.graphql
demo-hytradboi/example_queries/: actions_in_repos_with_min_10_hn_pts.ron  crates_io_github_actions.ron  hackernews_github_projects.ron  hackernews_github_run_steps.ron  hackernews_patio11_own_post_comments.ron  repos_with_min_50_hackernews_points.ron
demo-hytradboi/src/: actions_parser.rs  adapter.rs  main.rs  pagers.rs  token.rs  util.rs  vertex.rs
demo-metar/: Cargo.toml
demo-metar/src/: adapter.rs  main.rs  metar.rs  metar_weather.graphql
demo-metar/src/example_queries/: get_boston_metar.ron  gusty_reports.ron
docs/: README.md  mkdocs.yml  pyproject.toml  zensical.toml
docs/docs/: index.md
docs/docs/language_reference/: glossary.md  index.md
docs/docs/overview/: index.md
docs/language_reference/: index.md
docs/language_reference/querying/: filter.md  index.md  type_coercion.md
docs/language_reference/schema/: index.md
experiments/schemaless/: Cargo.toml
experiments/schemaless/example_queries/: actions_in_repos_with_min_hn_pts.graphql  crates_io_github_actions.graphql  hackernews_github_projects.graphql  hackernews_github_run_steps.graphql  hackernews_patio11_own_post_comments.graphql  repos_with_min_hackernews_points.graphql
experiments/schemaless/src/: lib.rs  main.rs  schema_inference.rs
experiments/schemaless_wasm/: Cargo.toml
experiments/schemaless_wasm/src/: lib.rs  util.rs
experiments/schemaless_wasm/www/: .eslintrc.json  app.tsx  babel.config.js  bootstrap.ts  eslint.config.mjs  index.ejs  index.html  index.ts  index.tsx  package-lock.json  package.json  prettier.config.js  tsconfig.json  webpack.config.js
experiments/trustfall_rustdoc/: Cargo.toml  README.md
experiments/trustfall_rustdoc/src/: adapter.rs  indexed_crate.rs  lib.rs  main.rs  rustdoc.graphql  rustdoc_schema.graphql  trustfall_rustdoc.d.ts
experiments/trustfall_rustdoc/tests/: test_crate_info.json  web.rs
filetests_proc_macro/: Cargo.toml
filetests_proc_macro/src/: lib.rs
pytrustfall/: Cargo.toml  README.md  demo.ipynb  numbers.graphql  pyproject.toml
pytrustfall/pytrustfall/: __init__.py  adapter.py  execution.py
pytrustfall/pytrustfall/tests/: numbers_adapter.py  test_execution.py  test_schema.py
pytrustfall/src/: errors.rs  lib.rs  shim.rs  value.rs
pytrustfall/trustfall/: __init__.py  _internals.py  _internals.pyi  adapter.py  execution.py  trustfall.pyi
pytrustfall/trustfall/tests/: numbers_adapter.py  test_execution.py  test_schema.py
trustfall/: Cargo.toml  external-types.toml
trustfall/examples/: README.md
trustfall/examples/feeds/: README.md  adapter.rs  feeds.graphql  main.rs
trustfall/examples/hackernews/: README.md  adapter.rs  hackernews.graphql  main.rs  vertex.rs
trustfall/examples/weather/: README.md  adapter.rs  main.rs  metar.rs  metar_weather.graphql  util.rs
trustfall/src/: lib.rs
trustfall/tests/: helper_macros.rs
trustfall_core/: Cargo.toml  external-types.toml
trustfall_core/fuzz/: Cargo.toml
trustfall_core/fuzz/fuzz_targets/: frontend.rs  frontend_numbers.rs
trustfall_core/src/: filesystem_interpreter.rs  lib.rs  main.rs  nullables_interpreter.rs  numbers_interpreter.rs  schema.rs  test_types.rs  util.rs
trustfall_core/src/frontend/: error.rs  filters.rs  mod.rs  outputs.rs  tags.rs  util.rs  validation.rs
trustfall_core/src/graphql_query/: directives.rs  error.rs  mod.rs  query.rs
trustfall_core/src/interpreter/: basic_adapter.rs  error.rs  execution.rs  filtering.rs  helpers.rs  macros.rs  mod.rs  recurse.rs  recursion.rs  replay.rs  tags.rs  trace.rs  transformation.rs
trustfall_core/src/ir/: indexed.rs  mod.rs  serialization.rs  ty.rs  types.rs  value.rs
trustfall_core/src/schema/: error.rs  mod.rs
trustfall_core/src/serialization/: deserializers.rs  mod.rs  tests.rs
trustfall_core/test_data/: README.md
trustfall_core/test_data/schemas/: custom_scalars_transforms_and_filters.graphql  filesystem.graphql  nullables.graphql  numbers.graphql  parameterized_edges.graphql  recurses.graphql
trustfall_derive/: .gitignore  Cargo.toml
trustfall_derive/src/: lib.rs
trustfall_derive/tests/: uses.rs
trustfall_derive/tests/ui/: call_skipped_conversion.rs  (+11 more)
trustfall_filetests_macros/: Cargo.toml
trustfall_filetests_macros/src/: lib.rs
trustfall_proc_macros/: Cargo.toml
trustfall_proc_macros/src/: lib.rs
trustfall_proc_macros/tests/: uses.rs
trustfall_stubgen/: Cargo.toml  README.md
trustfall_stubgen/src/: adapter_creator.rs  edges_creator.rs  entrypoints_creator.rs  lib.rs  main.rs  properties_creator.rs  root.rs  tests.rs  util.rs
trustfall_stubgen/test_data/: hackernews.graphql  no_edges.graphql  use_reserved_rust_names_in_schema.graphql  use_type_and_typeunderscore_edge_names.graphql  vertextype_with_type_and_typeunderscore_edge_and_property.graphql  vertextype_with_type_and_typeunderscore_edges.graphql  vertextype_with_type_and_typeunderscore_properties.graphql
trustfall_testbin/: Cargo.toml
trustfall_testbin/src/: main.rs
trustfall_wasm/: Cargo.toml  README.md  webdriver.json
trustfall_wasm/js/: iterify.js  iterify.ts  js_numbers_adapter.js  js_numbers_adapter.ts  package.json  tsconfig.json  web_test_query.js  web_test_query.ts
trustfall_wasm/src/: adapter.d.ts  adapter.rs  adapter.ts  lib.rs  shim.rs  trustfall_wasm.d.ts  util.rs
trustfall_wasm/tests/: common.rs  nodejs.rs  web.rs
trustfall_wasm/www/: README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js
(+1647 files in other folders)
