[workspace]
members = [
    "trustfall",
    "trustfall_core",
    "trustfall_testbin",
    "trustfall_filetests_macros",
    "trustfall_derive",
    "trustfall_stubgen",
    "trustfall_wasm",
    "pytrustfall",
    "demo-hytradboi",
    "experiments/schemaless",
    "experiments/schemaless_wasm",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.65"
authors = ["Predrag Gruevski <obi1kenobi82@gmail.com>"]
