[workspace]
members = [
    "trustfall",
    "trustfall_core",
    "trustfall_testbin",
    "trustfall_filetests_macros",
    "trustfall_derive",
    "trustfall_stubgen",
    "trustfall_wasm",
    "pytrustfall",
    "demo-hytradboi",
    "experiments/schemaless",
    "experiments/schemaless_wasm",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.65"
authors = ["Predrag Gruevski <obi1kenobi82@gmail.com>"]
license = "Apache-2.0"

[workspace.dependencies]
# The dependencies below are part of our public API.
# Bumping a major version here requires our own major version bump.
anyhow = "1.0.71"
async-graphql-parser = "6.0.4"
async-graphql-value = "6.0.4"
serde = "1.0.185"
serde_json = "1.0.96"
thiserror = "1.0.30"
regex = "1.9.1"

# The dependencies below are internal-only.
# Bumping major versions here should be safe.
itertools = "0.11.0"
once_cell = "1.17"
ron = "0.8.0"
similar-asserts = "1.4.2"
maplit = "1.0.2"
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0.51"
