[package]
name = "demo-feeds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql-parser = "^2.11.3"
async-graphql-value = "^2.11.3"
feed-rs = "1.0.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.6", features = ["blocking"] }
ron = "0.7.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.69"
trustfall_core = { path = "../trustfall_core" }
