[package]
name = "demo-hackernews"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hn_api = "0.1.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.8", features = ["blocking", "json"] }
ron = "0.7.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.74"
trustfall_core = { path = "../trustfall_core" }
