[package]
name = "demo-hytradboi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql-parser = "^2.11.3"
async-graphql-value = "^2.11.3"
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
consecrates = "0.1.1"
csv = "1.1.6"
futures-executor = "0.3.21"
git-url-parse = "0.4.0"
hn_api = "0.1.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
maplit = "1.0.2"
octorust = "0.1.35"
regex = "1.5.4"
reqwest = { version = "0.11.6", features = ["blocking"] }
ron = "0.6.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = "1.17.0"
trustfall_core = { path = "../trustfall_core" }
yaml-rust = "0.4.5"
