[package]
name = "demo-hytradboi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql-parser = { workspace = true }
async-graphql-value = { workspace = true }
base64 = "0.13.0"
consecrates = "0.1.1"
csv = "1.1.6"
futures-executor = "0.3.21"
git-url-parse = "0.4.0"
hn_api = "0.1.0"
itertools = { workspace = true }
maplit = { workspace = true }
octorust = "0.1.35"
regex = { workspace = true }
reqwest = { version = "0.11.6", features = ["blocking"] }
ron = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = "1.17.0"
trustfall = { path = "../trustfall" }
yaml-rust = "0.4.5"
