[package]
name = "demo-metar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql-parser = "^2.11.3"
async-graphql-value = "^2.11.3"
chrono = { version = "0.4.19", features = ["serde"] }
csv = "1.1.6"
lazy_static = "1.4.0"
maplit = "1.0.2"
regex = "1.5.4"
reqwest = { version = "0.11.6", features = ["blocking"] }
ron = "0.6.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.68"
trustfall_core = { path = "../trustfall_core" }
