[project]
name = "trustfall_docs"
description = "Documentation for the Trustfall project"
readme = "../README.md"
requires-python = ">=3.11"
authors = [
  {name = "Predrag Gruevski"}
]

[project.license]
text = "Apache 2.0"

[project.urls]
homepage = "https://play.predr.ag/"
repository = "https://github.com/obi1kenobi/trustfall"

[tool.poetry]
name = "trustfall_docs"
version = "0.0.0"  # Cargo.toml is authoritative, not this
description = "Documentation for the Trustfall project"
authors = ["Predrag Gruevski <obi1kenobi82@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
mkdocs = "^1.6.0"
mkdocs-material = { version = "^9.5.30", extras = ["imaging"] }
mkdocs-awesome-pages-plugin = "^2.9.3"
mkdocs-redirects = "^1.2.1"
pygments_ansi_color = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
