[package]
name = "pytrustfall"
version = "0.2.1"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `from trustfall import trustfall`). If you change this, you must also change
# the name of the top `#[pymodule]` in `src/lib.rs`.
name = "trustfall"

# Avoid the name conflict with the Rust lib with the same name.
# This library is only going to be used from Python, so rustdoc for it is of limited use.
doc = false

# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including any code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use pytrustfall;` unless the "rlib" or "lib" crate type is also included, e.g.:
crate-type = ["cdylib", "rlib"]

[dependencies]
async-graphql-parser = { workspace = true }
async-graphql-value = { workspace = true }
pyo3 = { version = "0.26.0", features = ["extension-module"] }
trustfall_core = { path = "../trustfall_core" }
