[project]
name = "trustfall"
description = "A query engine for any combination of data sources. Query your files and APIs as if they were databases!"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Predrag Gruevski"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Typing :: Typed",
]

[project.license]
text = "Apache 2.0"

[project.urls]
homepage = "https://play.predr.ag/"
repository = "https://github.com/obi1kenobi/trustfall"

[tool.poetry]
name = "trustfall"
version = "0.0.0"  # Cargo.toml is authoritative, not this
description = "Python bindings for trustfall."
authors = ["Predrag Gruevski <obi1kenobi82@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
maturin = "^1.3.0"
pytest = "^7.4.2"
black = "^23.9.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"

[tool.black]
line-length = 100

[tool.maturin]
sdist-include = ["trustfall/py.typed"]

[tool.mypy]
files = "trustfall"
strict = true

[[tool.mypy.overrides]]
module = "trustfall.tests.*"
disable_error_code = "attr-defined"

[build-system]
requires = ["maturin>=1.3.0,<2", "poetry-core>=1.0.0"]
build-backend = "maturin"
