[project]
name = "trustfall"
description = "A query engine for any combination of data sources. Query your files and APIs as if they were databases!"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Predrag Gruevski"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Database :: Database Engines/Servers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Software Development :: Interpreters",
  "Typing :: Typed",
]
dynamic = ["version"]

[project.license]
text = "Apache 2.0"

[project.urls]
homepage = "https://play.predr.ag/"
repository = "https://github.com/obi1kenobi/trustfall"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.15.2",
]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "src/**/*.rs" },
    { dir = "trustfall" },
    { file = "../trustfall_core/Cargo.toml" },
    { file = "../trustfall_core/src/**/*.rs" },
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.maturin]
sdist-include = ["trustfall/py.typed"]

[tool.mypy]
files = "trustfall"
strict = true

[[tool.mypy.overrides]]
module = "trustfall.tests.*"
disable_error_code = "attr-defined"

[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"
