[package]
name = "trustfall"
version = "0.2.0"
edition = "2021"
authors = ["Predrag Gruevski <obi1kenobi82@gmail.com>"]
license = "Apache-2.0"
description = "The trustfall query engine, empowering you to query everything."
repository = "https://github.com/obi1kenobi/trustfall"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
trustfall_core = { version = "0.2.0", path = "../trustfall_core" }
trustfall_derive = { version = "0.2.1", path = "../trustfall_derive" }
