[package]
name = "trustfall"
version = "0.4.0-beta.3"
edition = "2021"
authors = ["Predrag Gruevski <obi1kenobi82@gmail.com>"]
license = "Apache-2.0"
description = "The trustfall query engine, empowering you to query everything."
repository = "https://github.com/obi1kenobi/trustfall"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0.69"
trustfall_core = { version = "=0.4.0-beta.3", path = "../trustfall_core" }
trustfall_derive = { version = "=0.3.0", path = "../trustfall_derive" }

[dev-dependencies]  # including examples dependencies
ron = "0.7.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.69"
feed-rs = "1.0.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
hn_api = "0.1.0"
csv = "1.1.6"
regex = "1.7.1"
chrono = "0.4.23"

[[example]]
# Running queries over RSS/Atom feeds.
name = "feeds"

[[example]]
# Running queries over the HackerNews REST APIs hosted on Firebase
name = "hackernews"

[[example]]
# Running queries over CSV data of weather at US airports (the METAR system).
name = "weather"
