[package]
name = "trustfall"
version = "0.6.1"
license = "Apache-2.0"
description = "The trustfall query engine, empowering you to query everything."
repository = "https://github.com/obi1kenobi/trustfall"
readme = "../README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = { workspace = true }
trustfall_core = { version = "=0.6.0", path = "../trustfall_core" }
trustfall_derive = { version = "=0.3.1", path = "../trustfall_derive" }

[dev-dependencies]  # including examples dependencies
ron = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
time = { version = "0.3.23", features = ["serde-human-readable"] }
feed-rs = "1.0.0"
hn_api = "0.1.0"
csv = "1.1.6"

[[example]]
# Running queries over RSS/Atom feeds.
name = "feeds"

[[example]]
# Running queries over the HackerNews REST APIs hosted on Firebase
name = "hackernews"

[[example]]
# Running queries over CSV data of weather at US airports (the METAR system).
name = "weather"
