[package]
name = "trustfall_core"
version = "0.5.0"
authors = ["Predrag Gruevski <obi1kenobi82@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "The trustfall query engine, empowering you to query everything."
repository = "https://github.com/obi1kenobi/trustfall"
readme = "../README.md"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
__private = []

[lib]
name = "trustfall_core"
path = "src/lib.rs"
test = true
doc = true
crate-type = ["lib"]

[dependencies]
serde = { version = "^1.0", features = ["derive", "rc"] }
async-graphql-parser = "^2.11.3"
async-graphql-value = "^2.11.3"
maplit = "^1.0.2"
once_cell = "1.17"
smallvec = { version = "^1.6.1", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
regex = "1.5.4"
thiserror = "1.0.30"
itertools = "0.10.1"
ron = "^0.6.4"

[dev-dependencies]
serde_json = "^1.0.0"
trustfall_filetests_macros = { path = "../trustfall_filetests_macros", version = "0.2.0" }
