[package]
name = "trustfall_core"
version = "0.5.1"
license = "Apache-2.0"
description = "The trustfall query engine, empowering you to query everything."
repository = "https://github.com/obi1kenobi/trustfall"
readme = "../README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
__private = []

[lib]
name = "trustfall_core"
path = "src/lib.rs"
test = true
doc = true
crate-type = ["lib"]

[dependencies]
serde = { version = "^1.0", features = ["derive", "rc"] }
serde_json = "^1.0.0"
async-graphql-parser = "^2.11.3"
async-graphql-value = "^2.11.3"
maplit = "^1.0.2"
once_cell = "1.17"
smallvec = { version = "^1.6.1", features = ["serde"] }
regex = "1.5.4"
thiserror = "1.0.30"
itertools = "0.10.1"

[dev-dependencies]
ron = "^0.6.4"
trustfall_filetests_macros = { path = "../trustfall_filetests_macros", version = "0.2.0" }
similar-asserts = { version = "1.4.2", features = ["serde"] }
