[package]
name = "trustfall_core"
version = "0.7.1"
license = "Apache-2.0"
description = "The trustfall query engine, empowering you to query everything."
repository = "https://github.com/obi1kenobi/trustfall"
readme = "../README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
__private = []

[lib]
name = "trustfall_core"
path = "src/lib.rs"
test = true
doc = true
crate-type = ["lib"]

[dependencies]
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
async-graphql-parser = { workspace = true }
async-graphql-value = { workspace = true }
maplit = { workspace = true }
smallvec = { version = "1.6.1", features = ["serde"] }
regex = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
futures = "0.3.29"
async-trait = "0.1.74"
tokio = "1.34.0"

[dev-dependencies]
ron = { workspace = true }
trustfall_filetests_macros = { path = "../trustfall_filetests_macros", version = "0.2.0" }
similar-asserts = { workspace = true, features = ["serde"] }
