[package]
name = "trustfall_derive"
version = "0.3.0"
license = "Apache-2.0"
description = "Derive macros for the trustfall query engine."
repository = "https://github.com/obi1kenobi/trustfall"
readme = "../README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0.51"

[dev-dependencies]
trybuild = "1.0"
trustfall = { path = "../trustfall" }
