[package]
name = "trustfall_filetests_macros"
version = "0.2.0"
edition = "2018"
license = "Apache-2.0"
description = "Macros powering the trustfall project's filetests implementation."
repository = "https://github.com/obi1kenobi/trustfall"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
globset = "0.4.6"
walkdir = "2.3.1"
proc-macro2 = "^1.0.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
