[package]
name = "trustfall_proc_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
trustfall_core = { version = "0.1.1", path = "../trustfall_core" }
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0.51"

[dev-dependencies]
trybuild = "1.0"
