[package]
name = "trustfall_stubgen"
version = "0.2.2"
rust-version = "1.70"
license = "Apache-2.0"
description = "Generate a Trustfall adapter stub for a given schema."
repository = "https://github.com/obi1kenobi/trustfall"
readme = "../README.md"
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "trustfall_stubgen"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap"]

[dependencies]
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0.51"
trustfall = { path = "../trustfall", version = "0.5.1" }
maplit = "1.0.2"
async-graphql-parser = "^2.11.3"
async-graphql-value = "^2.11.3"
anyhow = "1.0.71"
serde = { version = "1.0.164", features = ["derive"] }
prettyplease = "0.2.6"
regex = "1.8.4"
clap = { version = "4.0.0", features = ["derive"], optional = true }

[dev-dependencies]
glob = "0.3.1"
serde_json = "1.0.96"
similar-asserts = "1.4.2"
