[package]
name = "trustfall_stubgen"
version = "0.3.0"
rust-version = "1.70"
license = "Apache-2.0"
description = "Generate a Trustfall adapter stub for a given schema."
repository = "https://github.com/obi1kenobi/trustfall"
readme = "../README.md"
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "trustfall_stubgen"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap"]

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
trustfall = { path = "../trustfall", version = "0.6.0" }
maplit = { workspace = true }
async-graphql-parser = { workspace = true }
async-graphql-value = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
prettyplease = "0.2.6"
regex = { workspace = true }
clap = { version = "4.0.0", features = ["derive"], optional = true }

[dev-dependencies]
glob = "0.3.1"
serde_json = { workspace = true }
similar-asserts = { workspace = true }
