[package]
name = "trustfall_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
ron = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
trustfall_core = { path = "../trustfall_core" }
wasm-bindgen = { version = "0.2.81" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.57"
web-sys = { version = "0.3", features = ["console"] }
maplit = "1.0.2"
gloo-utils = { version = "0.1.6", features = ["serde"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.31"
