[package]
name = "trustfall_wasm"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
ron = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
trustfall_core = { path = "../trustfall_core" }
wasm-bindgen = { version = "0.2.92" }
maplit = { workspace = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["console"] }
gloo-utils = { version = "0.2.0", features = ["serde"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
