[package]
name = "schemaless"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql-parser = { workspace = true }
async-graphql-value = { workspace = true }
derive-new = "0.7.0"
maplit = { workspace = true }
trustfall_core = { path = "../../trustfall_core" }
