[package]
name = "trustfall_rustdoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustdoc-types = "0.11.0"
clap = { version = "3.2.8", features = ["derive"] }
trustfall_core = { path = "../../trustfall_core" }
serde_json = "1.0.82"
anyhow = "1.0.58"
