[workspace]

[package]
publish = false
name = "trustfall_rustdoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
trustfall_core = { version = "0.6.0" }
trustfall_wasm = { git = "https://github.com/obi1kenobi/trustfall.git", rev = "trustfall-v0.6.1" }
trustfall-rustdoc-adapter = { version = ">=26.2.0,<26.3.0" }
serde_json = "1.0.82"
anyhow = "1.0.58"
wasm-bindgen = "0.2.80"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.57"
web-sys = { version = "0.3", features = ["console"] }
ouroboros = "0.15.2"
gloo-utils = { version = "0.1.6", features = ["serde"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.30"

[patch.crates-io]
trustfall = { git = "https://github.com/obi1kenobi/trustfall.git", rev = "trustfall-v0.6.1" }
trustfall_core = { git = "https://github.com/obi1kenobi/trustfall.git", rev = "trustfall-v0.6.1" }
